--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     
     
-    <title>socialeX</title>
+    <title>Talk People</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
